--- a/_posts/2010-07-29-git-tips-add-content-intelligently.textile
+++ b/_posts/2010-07-29-git-tips-add-content-intelligently.textile
@@ -24,7 +24,7 @@ I've seen (and done) any of the following:
 For this situation the git answer is: git add -p
 
 From the man pages:
-[bash]
+{% highlight bash %}
 -i, --interactive
 Add modified contents in the working tree interactively to the
 index. Optional path arguments may be supplied to limit operation
@@ -39,11 +39,11 @@ review the difference before adding modified contents to the index.
 This effectively runs add --interactive, but bypasses the initial
 command menu and directly jumps to the patch subcommand. See
 "Interactive mode" for details.
-[/bash]
+{% endhighlight %}
 
 I had used git for a many months before I heard about interactive add. It's really a wonderful option for those who care about keeping their commits to logical groupings of related content. What it means in practice is this: let's say you have a situation like so:
 
-[bash]
+{% highlight bash %}
 diff --git a/file1 b/file1
 index 8124a24..467954e 100644
 --- a/file1
@@ -58,11 +58,11 @@ more again here
 
 and here
 +and a new last line
-[/bash]
+{% endhighlight %}
 
 One file, two changes. The first really needs to be added along with some other changes, while that last line change is something you need for the future, but have already done now so you don't forget. What do you do?
 
-[bash]
+{% highlight bash %}
 ~/git_svn_post new_feature > gap
 diff --git a/file1 b/file1
 index 8124a24..467954e 100644
@@ -74,14 +74,14 @@ some lines of content here
 
 and some here
 Stage this hunk [y,n,q,a,d,/,j,J,g,e,?]?
-[/bash]
+{% endhighlight %}
 
 gap, as you could probably guess, is my alias for git add -p.
 
 So, you'll see some options "Stage this hunk..."
 
 You can now say "yes, I would like to add this to the staging area" by hitting y.
-[bash]
+{% highlight bash %}
 Stage this hunk [y,n,q,a,d,/,j,J,g,e,?]? y
 @@ -6,3 +7,4 @@ and some here
 more again here
@@ -89,10 +89,10 @@ more again here
 and here
 +and a new last line
 Stage this hunk [y,n,q,a,d,/,K,g,e,?]?
-[/bash]
+{% endhighlight %}
 and now you can say "nope, not at this time" by hitting n for this change. Take a look at your status now:
 
-[bash]
+{% highlight bash %}
 ~/git_svn_post new_feature > gst
 # On branch new_feature
 # Changes to be committed:
@@ -107,7 +107,7 @@ and now you can say "nope, not at this time" by hitting n for this change. Take 
 #	modified:   file1
 #
 ~/git_svn_post new_feature >
-[/bash]
+{% endhighlight %}
 
 The first time you see the above you might be a bit confused, but it's straightforward: there are some changes in file1 that are to be committed (they're in the index) and there are some changes that are just local (remember, the last line fix).
 
@@ -115,7 +115,7 @@ This is how you add just a few pieces of a file and not others.
 
 What if the changes are close to each other in the file? Then use s for split:
 
-[bash]
+{% highlight bash %}
 ~/git_svn_post new_feature > gap
 diff --git a/file1 b/file1
 index 6360209..ec68580 100644
@@ -149,7 +149,7 @@ and some here
 +
 
 Stage this hunk [y,n,q,a,d,/,j,J,g,e,?]?
-[/bash]
+{% endhighlight %}
 
 Sometimes you won't see the s when the change is several contiguous lines. In this case you can actually edit the diff to directly say what you want to get added. Bad ass. I'll go over this in a future post. 
 
