--- a/_posts/2010-12-08-getting-tir-working-via-vagrant.textile
+++ b/_posts/2010-12-08-getting-tir-working-via-vagrant.textile
@@ -11,7 +11,7 @@ As "Zed replied":http://twitter.com/zedshaw/status/12599187937955840 to a gist o
 
 Back to Tir: installation on the Ubuntu VM was pretty straightforward, but there are a couple tips that might save you some time:
 
-* Install a few tools ahead of time: sudo apt-get install curl unzip git-core
+* Install a few tools ahead of time: sudo apt-get install curl unzip git-core uuid-dev
 * "Install Mongrel 2":http://mongrel2.org/wiki?name=GettingStarted 
 ** if you see this "error while loading shared libraries: libzmq.so.0: cannot open shared object file: No such file or directory" run "ldconfig -v" as root
 * Install Lua 5.1
